<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusable="true"
    android:focusableInTouchMode="true">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/forkEye"-->
<!--        android:textSize="30sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@color/textWhite"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginLeft="50dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userLogin"
        android:textSize="40sp"
        android:textColor="@color/textWhite"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_white_round"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/textBlack"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_white_round"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/textBlack"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"

            >

            <Button
                android:id="@+id/login_btn"
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red3"
                android:paddingTop="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/white">

            </Button>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:scaleType="fitXY"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appVersion"
            android:textSize="15sp"
            android:textColor="@color/textWhite"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>


</RelativeLayout>