<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_unlock"
        android:layout_width="@dimen/_250sdp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/bt_start"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:background="@drawable/circle_white"
            android:text="@string/start"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/_17ssp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_zebra"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/poweredBy"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>